dependencies for java 24 suitability as well(it is not hindering java17)